Test CSS override with pink header border

--- a/stylesheets/extra.css
+++ b/stylesheets/extra.css
@@ -88,3 +88,8 @@
 .md-header__title {
   font-family: "FF Meta Pro", "Meta Pro", Helvetica, Arial, sans-serif;
 }
+
+/* TEMP TEST */
+.md-header {
+  border-bottom: 4px solid hotpink !important;
+}
