--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -42,3 +42,9 @@
 .md-typeset table th {
   font-weight: 600;
 }
+
+.md-header__button.md-logo img {
+  height: 32px;
+  /* adjust to taste */
+  width: auto;
+}
