--- a/docs/stylesheets/extra.css
+++ b/docs/stylesheets/extra.css
@@ -48,3 +48,9 @@
   /* adjust to taste */
   width: auto;
 }
+
+/* docs/stylesheets/extra.css */
+.md-header__button.md-logo img {
+  height: 32px;
+  width: auto;
+}
